<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.garagepoort</groupId>
    <artifactId>staffplusplus-network</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>
    <modules>
        <module>staffplusplus-network-common</module>
        <module>staffplusplus-network-velocity</module>
        <module>staffplusplus-network-bungee</module>
    </modules>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <tubing.version>7.0.2</tubing.version>
    </properties>
    <repositories>
        <repository>
            <id>staffplusplus-repo</id>
            <url>https://nexus.staffplusplus.org/repository/staffplusplus/</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>be.garagepoort</groupId>
                <artifactId>staffplusplus-network-common</artifactId>
                <version>1.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>
